frontend/src/index.css
body {
  overflow-wrap: break-word;
  margin: 0;
  padding: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
}

ul {
  padding-left: 1em;
  text-align: left;
  margin-right: 0;
}

li {
  list-style-type: none;
  display: block;
  color:  black;
  background-color: white;
  cursor: pointer;
  margin-top: -1px;
  border: 1px solid black;
}

li.post {
  border: 2px groove gray;
  margin-bottom: .5em;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

li.comment {
  width: 100%;
  border: .125em groove gray;
  margin-bottom: 1em;
  margin-left: 1em;
}

.header.category {
  text-align: left;
  margin: 1em .5em .4em;
}

.nav {
  overflow: hidden;
  overflow-wrap: break-word;
  display: block;
  justify-content: space-between;
  align-items: center;
}

.nav.link {
  text-decoration: none;
  padding: .5em 1em;
  max-width: 60%;
}

.vote {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 1em;
}

.vote span {
  width: 3em;
  text-align: center;
  line-height: 1.25;
  margin: .25em .5em;
  overflow: hidden;
  overflow-wrap: break-word;
}

.nav.link.edit {
  margin: 0;
  text-align: right;
  font-size: 1em;
  border: solid black .125em;
}

.nav.link.comment {
  margin-top: 1em;
  margin-right: 1em;
  text-align: right;
  font-size: 1em;
  border: solid black .125em;
}

.nav.link.addpost {
  flex-direction: row-reverse;
  font-size: 1em;
  border: solid black .125em;
  background: white;
}

select.sort {
  margin-left: 1em;
  border: none;
  background-color: #B9B9B9;
  width: 10em;
  height: 2em;
  font-size: 1em;
}

.sort-header {
  margin: 0 0 .5em;
  font-size: 1.25em;
  padding-left: 1em;
}

.sortblock {
  display: block;
  margin-left: 1em;
}

.addPostForm {
  padding: 8px 0;
  margin: 0 auto;
}

.addPostForm input {
  display: block;
  padding: 5px 10px;
  margin-bottom: 10px;
  font-size: inherit;
  background: transparent;
  border: none;
  border-bottom: 1px solid #ccc;
  width: 60%;
}

.addPostForm textarea {
  display: block;
  padding: 5px 10px;
  margin-top: 2em;
  margin-bottom: 1em;
  width:80%;
  height:10em;
  font-size: inherit;
  background: transparent;
  border: 1px solid #ccc;
}

.addPostForm button {
  margin: 1em;
  margin-right: 20%;
  background: #ccc;
  padding: 10px;
  text-transform: uppercase;
  float: right;
  font-size: inherit;
  border: none;
  cursor: pointer;
}

.addPostForm button:hover {
  background-color: #999;
}

.postFormHeader {
  text-transform: uppercase;
}

.active {
  color: orange;
}

.column.menu {
  width: 10em;
}

.column.content {
  padding-left: 1em;
  width: 40em; 
  margin-top: 1em;
}

.container-comments {
  margin-top: 2em;
  width: 100%;
  order: 2;
}

.comment.content {
  text-decoration: none;
  margin-left: 1em;
}

.commentAuthor {
  font-size: 1em;
  font-weight: 300;
  margin: 0.3125em 0 0 1.5em;
}

.commentBody {
  font-size: 1em;
}

.container-post {
  order: 0;
}

.container-forms {
  order: 1;
}

.structure-flex {
  display: flex;
  flex-direction: column;
}

.structure-post {

}

.postHeader {
  font-size: 2;
  font-weight: 300;
  margin: 0;
}

.horizJust {
  display: flex;
  width: inherit;
  align-items: flex-start;
  margin-bottom: 2em;
}

.structure-comment {
  display: flex;
  flex-direction: column;
}

.horizJust.header {
  justify-content: space-between;
  align-items: center;
  margin: 0;
}

.postSubheader {
  font-size: 1em;
  font-weight: 300;
  margin-left: 4em;
  width: 30em;
  overflow: hidden;
  overflow-wrap: break-word;
}

.postBody {
  font-size: 1em;
  margin-left: 2em;
  margin-bottom: .5em;
}

.postVoteScore, .commentVoteScore  {
  font-weight: bold;
  font-size: 1em;
  text-align: right;
  margin-right: .5em;
  margin-top: 1em;
  margin-bottom: 1em;
}

